# Haskell-Morte-Library

./: .travis.yml  LICENSE  README.md  default.nix  morte.cabal  release.nix  shell.nix  stack-lts-3.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack.yaml
Prelude/: filter  length  not  null
Prelude/Bool/: (&&)  (<)  (<=)  @  and
Prelude/List/: (>=>)  (>>=)  Cons  empty  pure
Prelude/Maybe/: (<=<)  (<|>)  (>=>)  @  map  pure
Prelude/Nat/: (*)  0  Succ  product  sum
bench/: Main.hs
bench/src/: concat.mt
benchmarks/: Bench.hs
benchmarks/src/: factorial.mt  recursive.mt
exec/: Ipfs.hs  Main.hs
local/: (.)  even  find  flip  id  odd  replicate  reverse
local/Bool/: (==)  (>)  (>=)  (||)  False  True  or
local/Bool/(/: =)
local/List/: (<=<)  (<|>)  (=<<)  0  @  all  any  concat  map
local/Maybe/: (=<<)  (>>=)  0  Just  empty
local/Nat/: (+)  @  Zero
nix/: formatting.nix  morte.nix
remote/: (.)  even  filter  find  flip  id  length  not  null  odd  replicate  reverse
remote/Bool/: (&&)  (<)  (<=)  (==)  (>)  (>=)  (||)  @  False  True  and  or
remote/Bool/(/: =)
remote/List/: (<=<)  (<|>)  (=<<)  (>=>)  (>>=)  0  @  Cons  Nil  all  any  concat  empty  map  pure
remote/Maybe/: (<=<)  (<|>)  (=<<)  (>=>)  (>>=)  0  @  Just  Nothing  empty  map  pure
remote/Nat/: (*)  (+)  0  @  Succ  Zero  product  sum
src/: Morte.hs
src/Morte/: Context.hs  Core.hs  Import.hs  Lexer.x  Parser.hs  Parser.y  Token.hs  Tutorial.hs
test/: ClosedWellTyped.hs  Main.hs  Properties.hs
test/src/: example0.mt  example1.mt  example10.mt  example11.mt  example12.mt  example13.mt  example14.mt  example15.mt  example2.mt  example3.mt  example4.mt  example5.mt  example6.mt  example7.mt  example8.mt  example9.mt
testsuite/: ClosedWellTyped.hs  Properties.hs
