Name: morte
Version: 1.1.2
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2014 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Morte-Library/issues
Synopsis: A bare-bones calculus of constructions
Description: Morte is a typed, purely functional, and strongly normalizing
    intermediate language designed for whole-program super-optimization.  Use
    this library to type-check, optimize, parse, pretty-print, serialize and
    deserialize expressions in this intermediate language.
    .
    This library also installs an executable that you can use to type-check and
    optimize a @morte@ program.
    .
    "Morte.Core" contains the core calculus of constructions for this language
    .
    "Morte.Lexer" contains the @alex@-generated lexer for Morte
    .
    "Morte.Parser" contains the @happy@-generated parser for Morte
    .
    Read "Morte.Tutorial" to learn how to use this library
Category: Compiler
Data-Dir: benchmarks/src
Data-Files: *.mt
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Morte-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4        && <  5     ,
        array                >= 0.4.0.0  && <  0.6   ,
        binary                              <  0.8   ,
        deepseq              >= 1.3.0    && <  1.5   ,
        lens-family-core     >= 1.0.0    && <  1.3.0 ,
        pipes                >= 4.0.0    && <  4.2   ,
        text                 >= 0.11.1.0 && <  1.3   ,
        transformers         >= 0.2.0.0  && <  0.5
    Exposed-Modules:
        Morte.Core,
        Morte.Lexer,
        Morte.Parser,
        Morte.Tutorial
    Build-Tools: alex, happy
    GHC-Options: -O2

Executable morte
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base                 >= 4        && <  5        ,
        morte                                           ,
        optparse-applicative                <= 0.11.0.1 ,
        text                 >= 0.11.1.0 && <  1.3

Benchmark benchmarks
    Type:           exitcode-stdio-1.0
    HS-Source-Dirs: benchmarks
    Main-Is:        Bench.hs
    GHC-Options:    -O2 -Wall

    Build-Depends:
        base      >= 4        && < 5    ,
        criterion                < 1.1  ,
        morte     >= 1.1.0              ,
        text      >= 0.11.1.0 && <  1.3
