Name: morte
Version: 1.7.2
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2016 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Morte-Library/issues
Synopsis: A bare-bones calculus of constructions
Description: Morte is a typed, purely functional, and strongly normalizing
    intermediate language designed for whole-program super-optimization.  Use
    this library to type-check, optimize, parse, pretty-print, serialize and
    deserialize expressions in this intermediate language.
    .
    This library also installs an executable that you can use to type-check and
    optimize a @morte@ program.
    .
    "Morte.Core" contains the core calculus of constructions for this language
    .
    "Morte.Lexer" contains the @alex@-generated lexer for Morte
    .
    "Morte.Parser" contains the parser for Morte
    .
    Read "Morte.Tutorial" to learn how to use this library
Category: Compiler
Data-Files: bench/src/*.mt test/src/*.mt
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Morte-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4        && < 5   ,
        array                >= 0.4.0.0  && < 0.6 ,
        binary               >= 0.7.0.0  && < 0.9 ,
        containers           >= 0.5.0.0  && < 0.7 ,
        deepseq              >= 1.3.0    && < 1.5 ,
        Earley               >= 0.10.1.0 && < 0.14,
        http-client          >= 0.5.0    && < 0.7 ,
        http-client-tls      >= 0.2.0    && < 0.4 ,
        microlens            >= 0.2.0.0  && < 0.5 ,
        microlens-mtl        >= 0.1.3.1  && < 0.2 ,
        pipes                >= 4.0.0    && < 4.4 ,
        system-filepath      >= 0.3.1    && < 0.5 ,
        system-fileio        >= 0.2.1    && < 0.4 ,
        text                 >= 0.11.1.0 && < 1.3 ,
        formatting           >= 6.3      && < 6.4 ,
        transformers         >= 0.2.0.0  && < 0.6
    Exposed-Modules:
        Morte.Context,
        Morte.Core,
        Morte.Import,
        Morte.Lexer,
        Morte.Parser,
        Morte.Tutorial
    Build-Tools: alex

Executable morte
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base                 >= 4     && < 5    ,
        code-page            >= 0.1.1 && < 0.3  ,
        formatting                              ,
        morte                                   ,
        optparse-applicative             < 0.15 ,
        text

Benchmark bench
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: bench
    Main-Is: Main.hs
    GHC-Options: -Wall
    Build-Depends:
        base            >= 4        && < 5  ,
        criterion       >= 1.0.0.1  && < 1.6,
        morte                               ,
        system-filepath >= 0.3.1    && < 0.5,
        text            >= 0.11.1.0 && < 1.3

Test-Suite test
    Type:           exitcode-stdio-1.0
    HS-Source-Dirs: test
    Main-Is:        Main.hs
    Other-Modules:  ClosedWellTyped
    GHC-Options:    -Wall
    Build-Depends:
        base             >= 4        && < 5   ,
        mtl              >= 2.2      && < 2.3 ,
        QuickCheck       >= 2.8.1    && < 2.14,
        system-filepath  >= 0.3.1    && < 0.5 ,
        tasty            >= 0.11     && < 1.3 ,
        tasty-hunit      >= 0.9      && < 0.11,
        tasty-quickcheck >= 0.8.4    && < 0.11,
        transformers     >= 0.2.0.0  && < 0.6 ,
        morte                                 ,
        text             >= 0.11.1.0 && < 1.3
